--- a/requirements.txt
+++ b/requirements.txt
@@ -264,3 +264,13 @@ xxhash==3.4.1
 yarl==1.9.4
 z3-solver==4.13.0.0
 zipp==3.17.0
+sacrebleu==2.5.1
+rouge_score==0.1.2
+nltk==3.9.2
+pycocoevalcap==1.2
+torch-fidelity==0.3.0
+lpips==0.1.4
+distributed==2023.4.1
+dreamsim==0.2.1
+evo==1.31.1
+pytorch-msssim==1.0.0
